# CVin3D12

./: README.md  pyproject.toml
src/2025.09.30/: .gitignore
src/2025.09.30/task1b/: report.md  task1b.py
src/2025.09.30/task2/: README.md
src/2025.09.30/task2b/: README.md  task2b.py
src/2025.10.07/task2/: task2.py
src/lesson1/task1/: README.md
src/lesson2/task1/: README.md
src/lesson2/task2/: README.md
src/lesson2/task3/: README.md
src/lesson2/task4/: README.md  config.yaml  task4.py
src/lesson3/: .gitignore
src/lesson3/task1/: README.md  augmentations.py  conf.yaml  task1.py  utils.py
src/lesson4/: README.md  conf.yaml  dataset.py  main.py  model.py  visualize.py
src/lesson5/: .gitignore  README.md  conf.yaml  dataset.py  inspectds.py  main.py  model.py  predict.py  visualize.py
src/point_clowd_segmentation/: .gitignore  README.md  dataset.py  inference.py  metrics.py  models.py  train.py  utils.py
src/point_clowd_segmentation/config/: basic.yaml
src/point_clowd_segmentation/results/: config.yaml  final_results.csv
src/point_clowd_segmentation/results/DGCNN/: history_DGCNN.json  metrics_DGCNN.json
src/point_clowd_segmentation/results/PointNet/: history_PointNet.json  metrics_PointNet.json
src/point_clowd_segmentation/results/PointNetpp/: history_PointNetpp.json  metrics_PointNetpp.json
